--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.6/vue-resource.min.js"></script>
 </head>
   <body lang="en">
@@ -21,22 +21,22 @@
       </div>
       <div class="row">
         <div class="col">
-        <div id="app">
-          <!-- Nav tabs -->
-          <ul class="nav nav-pills nav-fill">
-            <li class="nav-item" v-for="(tab, index) in tabs">
-              <a v-bind:class="index?'nav-link':'nav-link active'" v-bind:href="'#' + tab.id" role="tab" data-toggle="tab">{{tab.id}}</a>
-            </li>
-          </ul>
+          <div id="app">
+            <!-- Nav tabs -->
+            <ul class="nav nav-pills nav-fill">
+              <li class="nav-item" v-for="(tab, index) in tabs">
+                <a v-bind:class="index?'nav-link':'nav-link active'" v-bind:href="'#' + tab.id" role="tab" data-toggle="tab">{{tab.id}}</a>
+              </li>
+            </ul>
 
-          <!-- Tab panes -->
-          <div class="tab-content">
-            <div role="tabpanel" v-for="(tab, index) in tabs" v-bind:class="index?'tab-pane fade':'tab-pane fade active show'" v-bind:id="tab.id">
-              <tab-content :tab="tab"/>
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <div role="tabpanel" v-for="(tab, index) in tabs" v-bind:class="index?'tab-pane fade':'tab-pane fade active show'" v-bind:id="tab.id">
+                <tab-content :tab="tab"/>
+              </div>
             </div>
           </div>
         </div>
-      </div>
       </div>
     </div>
     <script src="./vue.js"></script>
