feat: add Open Data QA model

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.6/vue-resource.min.js"></script>
 </head>
 <body lang="en">
-<div class="container">
+<div class="container" style="max-width: 1240px;">
     <div class="row">
         <div class="col" align="center" style="margin:2em">
             <a href="http://ipavlov.ai"><img src="http://ipavlov.ai/img/ipavlov_title.png" width="50%"/></a>
