--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.6/vue-resource.min.js"></script>
 </head>
 <body lang="en">
+<div class="modal" id="pleaseWaitDialog" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="loader"></div>
+    </div>
+</div>
 <div class="container">
     <div class="row">
         <div class="col" align="center" style="margin:2em">
