--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="container">
     <div class="row">
         <div class="col" align="center" style="margin:2em">
-            <a href="http://ipavlov.ai"><img src="http://ipavlov.ai/img/ipavlov_title.png" width="50%"/></a>
+            <a href="https://ipavlov.ai"><img src="https://ipavlov.ai/img/ipavlov_title.png" width="50%"/></a>
         </div>
     </div>
     <div class="row">
