chore: add IE10 compatibility

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="./favicon.ico">
 
+    <script src="dist/babel-polyfill.min.js"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
@@ -69,6 +71,6 @@
         </div>
     </div>
 </div>
-<script src="./vue.js"></script>
+<script src="dist/vue.js"></script>
 </body>
 </html>
