--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <div id="app">
+            <div id="app" style="visibility: hidden;">
                 <!-- Nav tabs -->
                 <ul class="nav nav-pills nav-fill" id="tabs">
                     <li class="nav-item" v-for="(tab, index) in tabs" v-if="tab.lang===lang">
