--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
                         <tab-content :tab="tab"/>
                     </div>
                 </div>
+                <div style="margin: 3em auto; text-align: center;">
+                    <h3>Solution parnters</h3>
+                    <div style="margin: 2em auto 0; text-align: center;">
+                        <a href="https://datamonsters.com/">
+                            <img src="https://ipavlov.ai/img/dmlogo-u-2lines-black-vector.png" style="width: 26em;">
+                        </a>
+                    </div>
+                    <div style="margin: 2em auto 0; text-align: center;">
+                            <img src="https://ipavlov.ai/logo_idecide.png" style="width: 26em;">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
