--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+ 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121416192-4"></script>
+ 	<script>
+ 		window.dataLayer = window.dataLayer || [];
+ 		function gtag(){dataLayer.push(arguments);}
+ 		gtag('js', new Date());
+ 		gtag('config', 'UA-121416192-4');
+ 	</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="./favicon.ico">
