--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div style="margin: 3em auto; text-align: center;">
-                    <h3>Solution parnters</h3>
+                    <h3>Solution partners</h3>
                     <div style="margin: 2em auto 0; text-align: center;">
                         <a href="https://datamonsters.com/">
                             <img src="https://ipavlov.ai/img/dmlogo-u-2lines-black-vector.png" style="width: 26em;">
