add fastlaw.io logo to solution partners section

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                     <div style="margin: 2em auto 0; text-align: center;">
                             <img src="https://ipavlov.ai/logo_idecide.png" style="width: 26em;">
                     </div>
+                    <div style="margin: 2em auto 0; text-align: center;">
+                            <img src="img/fastlaw.io.png" style="width: 26em;">
+                    </div>
                 </div>
             </div>
         </div>
