fix href on fastlaw.io logo

--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                             <img src="https://ipavlov.ai/logo_idecide.png" style="width: 26em;">
                     </div>
                     <div style="margin: 2em auto 0; text-align: center;">
+                        <a href="https://fastlaw.io">
                             <img src="img/fastlaw.io.png" style="width: 26em;">
+                        </a>
                     </div>
                 </div>
             </div>
