--- a/index.html
+++ b/index.html
@@ -105,11 +105,13 @@
                     <h3>Solution partners</h3>
                     <div style="margin: 2em auto 0; text-align: center;">
                         <a href="https://datamonsters.com/">
-                            <img src="https://ipavlov.ai/img/dmlogo-u-2lines-black-vector.png" style="width: 26em;">
+                            <img src="img/dmlogo-u-2lines-black-vector.png" style="width: 26em;">
                         </a>
                     </div>
                     <div style="margin: 2em auto 0; text-align: center;">
-                            <img src="https://ipavlov.ai/logo_idecide.png" style="width: 26em;">
+                        <a href="http://idecide.ico.kz/">
+                            <img src="img/logo_idecide.png" style="width: 26em;">
+                        </a>
                     </div>
                     <div style="margin: 2em auto 0; text-align: center;">
                         <a href="https://fastlaw.io">
