--- a/index.html
+++ b/index.html
@@ -104,18 +104,14 @@
                 <div style="margin: 3em auto; text-align: center;">
                     <h3>Solution partners</h3>
                     <div style="margin: 2em auto 0; text-align: center;">
-                        <a href="https://datamonsters.com/">
-                            <img src="img/dmlogo-u-2lines-black-vector.png" style="width: 26em;">
+                        <a href="http://idecide.ico.kz/" style="padding: 1em;">
+                            <img src="img/logo_idecide.png" style="width: 20em;">
                         </a>
-                    </div>
-                    <div style="margin: 2em auto 0; text-align: center;">
-                        <a href="http://idecide.ico.kz/">
-                            <img src="img/logo_idecide.png" style="width: 26em;">
+                        <a href="https://datamonsters.com/" style="padding: 1em;">
+                            <img src="img/dmlogo-u-2lines-black-vector.png" style="width: 20em;">
                         </a>
-                    </div>
-                    <div style="margin: 2em auto 0; text-align: center;">
-                        <a href="https://fastlaw.io">
-                            <img src="img/fastlaw.io.png" style="width: 26em;">
+                        <a href="https://fastlaw.io" style="padding: 1em;">
+                            <img src="img/fastlaw.io.png" style="width: 20em;">
                         </a>
                     </div>
                 </div>
