fix: remove iDecide's href

--- a/index.html
+++ b/index.html
@@ -104,14 +104,12 @@
                 <div style="margin: 3em auto; text-align: center;">
                     <h3>Solution partners</h3>
                     <div style="margin: 2em auto 0; text-align: center;">
-                        <a href="http://idecide.ico.kz/" style="padding: 1em;">
-                            <img src="img/logo_idecide.png" style="width: 20em;">
+                        <img src="img/logo_idecide.png" style="width: 20em; margin: 0 1em;">
+                        <a href="https://datamonsters.com/">
+                            <img src="img/dmlogo-u-2lines-black-vector.png" style="width: 20em; margin: 0 1em;">
                         </a>
-                        <a href="https://datamonsters.com/" style="padding: 1em;">
-                            <img src="img/dmlogo-u-2lines-black-vector.png" style="width: 20em;">
-                        </a>
-                        <a href="https://fastlaw.io" style="padding: 1em;">
-                            <img src="img/fastlaw.io.png" style="width: 20em;">
+                        <a href="https://fastlaw.io">
+                            <img src="img/fastlaw.io.png" style="width: 20em; margin: 0 1em;">
                         </a>
                     </div>
                 </div>
