Redirect to demo.deeppavlov.ai

--- a/index.html
+++ b/index.html
@@ -1,140 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
- 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121416192-4"></script>
- 	<script>
- 		window.dataLayer = window.dataLayer || [];
- 		function gtag(){dataLayer.push(arguments);}
- 		gtag('js', new Date());
- 		gtag('config', 'UA-121416192-4');
- 	</script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/x-icon" class="js-site-favicon" href="./favicon.ico">
-
-    <script src="dist/babel-polyfill.min.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.6/vue-resource.min.js"></script>
-
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
-    <script>
-        window.addEventListener("load", function(){
-            window.cookieconsent.initialise({
-                "palette": {
-                    "popup": {
-                        "background": "#237afc"
-                    },
-                    "button": {
-                        "background": "#fff",
-                        "text": "#237afc"
-                    }
-                },
-                "showLink": false,
-                "position": "bottom-right",
-                "content": {
-                    "message": "This website uses cookies. By continuing to use this site, you accept our use of cookies.",
-                    "dismiss": "ACCEPT &amp; CLOSE"
-                }
-            })});
-    </script>
-</head>
-<body lang="en">
-<div class="modal" id="pleaseWaitDialog" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="loader"></div>
-    </div>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col" align="center" style="margin:2em">
-            <a href="https://deeppavlov.ai" id="DeepLink"><img src="deeppavlov_title.png" width="50%"/></a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col" id="AppContainer">
-            <div id="app" style="visibility: hidden;">
-                <!-- Nav tabs -->
-                <div class="NavMenu">
-                    <ul class="nav nav-pills nav-fill" id="tabs">
-                        <li class="nav-item NavButton" v-for="(tab, index) in tabs" :lang="tab.lang" v-show="tab.lang===lang">
-                            <a class="nav-link" :href="'#' + tab.id" role="tab"
-                               data-toggle="tab">{{tab.name || tab.id}}</a>
-                        </li>
-                    </ul>
-                    <div>
-                        <div class="btn-group btn-group-toggle">
-                            <label :class="(lang==='ru')?'btn btn-primary':'btn btn-secondary'">
-                                <input type="radio" name="lang" id="langRu" value="ru" autocomplete="off"
-                                       v-model="lang" @change="langChange"> Ru
-                            </label>
-                            <label :class="(lang==='en')?'btn btn-primary':'btn btn-secondary'">
-                                <input type="radio" name="lang" id="langEn" value="en" autocomplete="off"
-                                       v-model="lang" @change="langChange"> En
-                            </label>
-                            <label :class="(lang==='multiLang')?'btn btn-primary':'btn btn-secondary'">
-                                <input type="radio" name="lang" id="langMulti" value="multiLang" autocomplete="off"
-                                       v-model="lang" @change="langChange"> Multi-lang
-                            </label>
-                        </div>
-                    </div>    
-                </div>
-
-                <!-- Tab panes -->
-                <div class="tab-content">
-                    <div role="tabpanel" v-for="(tab, index) in tabs"
-                         class="tab-pane fade" :id="tab.id">
-                        <tab-content :tab="tab"></tab-content>
-                    </div>
-                </div>
-                <!-- <div style="margin: 3em auto; text-align: center;">
-                    <h3>Solution partners</h3>
-                    <div style="margin: 2em auto 0; text-align: center;">
-                        <img src="img/logo_idecide.png" style="width: 20em; margin: 0 1em;">
-                        <a href="https://datamonsters.com/">
-                            <img src="img/dmlogo-u-2lines-black-vector.png" style="width: 20em; margin: 0 1em;">
-                        </a>
-                        <a href="https://fastlaw.io">
-                            <img src="img/fastlaw.io.png" style="width: 20em; margin: 0 1em;">
-                        </a>
-                    </div>
-                </div>
-                -->
-            </div>
-        </div>
-    </div>
-</div>
-<footer class="container footer">
-    
-    <div class="contactUs">
-        <p>You can train this model on your own data, or we can do it for you, contact 
-        <a href="mailto:partner@ipavlov.ai">partner@ipavlov.ai</a></p>
-    </div>
-   
-    <a href="https://github.com/deepmipt">
-        <img src="DeepPavlov.png" alt="powered by DeepPavlov"/>
-        © deepmipt on GitHub
-    </a>
-</footer>
-<script src="dist/vue.js"></script>
-</body>
+  <head>
+    <meta http-equiv="Refresh" content="0; url=//demo.deeppavlov.ai" />
+  </head>
+  <body>
+    <p>Please follow <a href="//demo.deeppavlov.ai/">this link</a>.</p>
+  </body>
 </html>
